[package]
name = "rust-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sfml = { git = 'https://github.com/jeremyletang/rust-sfml', branch = 'master' }

[[bin]]
name = "rust-snake"
path = "src/main.rs"
